[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "data-quality-impact-monitor"
version = "0.1.0"
description = "An end-to-end monitor for KPI data quality and anomaly detection."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "numpy>=1.26",
    "pandas>=2.2",
    "pydantic>=2.7",
    "python-dotenv>=1.0",
    "scikit-learn>=1.5",
    "SQLAlchemy>=2.0",
    "streamlit>=1.36",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "ruff>=0.5",
]
postgres = [
    "psycopg[binary]>=3.2",
]
spark = [
    "pyspark>=3.5",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
